add subdirectory, favicon, basic styles

--- a/web-component/index.html
+++ b/web-component/index.html
@@ -6,14 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" />
     <link rel="stylesheet" href="/style.css" />
-    <title>My demo projects</title>
+    <title>Web component</title>
   </head>
   <body>
-    <h1>My demo projects</h1>
-    <nav>
-      <ul>
-        <li><a href="/web-component">Web component rendered by React</a></li>
-      </ul>
-    </nav>
+    Ready Player One
   </body>
 </html>
