--- a/web-component/index.html
+++ b/web-component/index.html
@@ -9,6 +9,35 @@
     <title>Web component</title>
   </head>
   <body>
-    Ready Player One
+    <h1>User card</h1>
+
+    <user-card name="Albert" surname="Works" age="24" imageSrc="./avatar.png"></user-card>
+
+    <p
+      class="codepen"
+      data-height="500"
+      data-theme-id="light"
+      data-default-tab="html,result"
+      data-user="albertmolodec"
+      data-slug-hash="RwoqjYv"
+      style="
+        height: 500px;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid;
+        margin: 1em 0;
+        padding: 1em;
+      "
+      data-pen-title="User card (web component)"
+    >
+      <span
+        >See the Pen <a href="https://codepen.io/albertmolodec/pen/RwoqjYv"> User card (web component)</a> by Albert
+        Abdulmanov (<a href="https://codepen.io/albertmolodec">@albertmolodec</a>) on
+        <a href="https://codepen.io">CodePen</a>.</span
+      >
+    </p>
+    <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
   </body>
 </html>
