move strings to separate module

--- a/web-component/index.html
+++ b/web-component/index.html
@@ -23,7 +23,6 @@
       <user-card></user-card>
     </div>
 
-    <script src="./script.js" type="module" async>
-    </script>
+    <script src="./user-card.js" type="module" async></script>
   </body>
 </html>
