--- a/web-component/index.html
+++ b/web-component/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/root.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Web component</title>
   </head>
   <body>
-    <h1>User card</h1>
+    <h1>User cards</h1>
 
-    <div style="display: flex; gap: 20px; flex-wrap: wrap">
+    <div class="cards">
       <user-card
         name="Albert"
         surname="Abdulmanov"
