--- a/web-component/index.html
+++ b/web-component/index.html
@@ -7,12 +7,22 @@
     <link rel="icon" href="/favicon.png" />
     <link rel="stylesheet" href="/root.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
     <title>Web component</title>
   </head>
   <body>
-    <h1>User cards</h1>
+    <h1>Тестовое задание «Карточка пользователя».</h1>
 
-    <div class="cards">
+    <p>Веб-компонент отображает карточку пользователя. В ней есть имя, фамилия, возраст и фотография.</p>
+
+    <p>
+      Все данные, необходимые для отображения, передаются в компонент с помощью HTML-атрибутов кастомного HTML-тэга
+      <code>user-card</code>. При изменении атрибутов элемента карточка обновляется в реальном времени. Содержимое
+      карточки рендерится с помощью библиотеки React.
+    </p>
+
+    <div class="show">
       <user-card
         name="Albert"
         surname="Abdulmanov"
@@ -20,10 +30,135 @@
         imgsrc="https://habrastorage.org/getpro/moikrug/uploads/user/100/023/445/3/avatar/6e1f6f25421b83fee42ce965b9463747.png"
       >
       </user-card>
-
-      <user-card></user-card>
+      <pre>
+      <code>
+  &lt;user-card
+    name="Albert"
+    surname="Abdulmanov"
+    age="24"
+    imgsrc="./6e1f6f25421b83fee42ce965b9463747.png"
+  >
+  &lt;/user-card>
+      </code>
+    </pre>
     </div>
 
+    <p>Если не задать атрибуты, будут подставлены дефолтные.</p>
+
+    <div class="show">
+      <user-card></user-card>
+      <pre>
+    <code>
+      &lt;user-card>&lt;/user-card>
+    </code>
+  </pre>
+    </div>
+
+    <h2>Комментарии</h2>
+    <p>React и ReactDOM импортируется в JS-модулю через</p>
+
+    <h2>Проблемы</h2>
+    <p>
+      Когда я прочитал задание, то не понял, для чего здесь нужен React, ведь можно добавлять и заменять DOM-элементы
+      руками — их тут немного. Но задание есть задание, и я использую <code>ReactDOM.render()</code> для отрисовки
+      компонента в <code>shadowRoot</code>'е и обновления изменившихся атрибутов. К тому же я прочитал несколько
+      руководств и получил опыт добавления реакт-компонентов в веб-компоненты и наоборот.
+    </p>
+
+    <p>Изначально я хотел написать код в Codepen и вставить сюда Embed:</p>
+    <p
+      class="codepen"
+      data-height="939"
+      data-theme-id="light"
+      data-default-tab="js,result"
+      data-user="albertmolodec"
+      data-slug-hash="XWNyOpw"
+      style="
+        height: 939px;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid;
+        margin: 1em 0;
+        padding: 1em;
+      "
+      data-pen-title="User card (web component) + React"
+    >
+      <span
+        >See the Pen <a href="https://codepen.io/albertmolodec/pen/XWNyOpw"> User card (web component) + React</a> by
+        Albert Abdulmanov (<a href="https://codepen.io/albertmolodec">@albertmolodec</a>) on
+        <a href="https://codepen.io">CodePen</a>.</span
+      >
+    </p>
+    <p>
+      Это оказалось не очень хорошей идеей, потому что Codepen долго и иногда внезапно пересобирает код, не сохраняет
+      историю изменений, мусорит в инспекторе. Поэтому я перенес код в свою локальную среду выполнения и задеплоил на
+      Github Pages.
+    </p>
+
+    <p>
+      <a
+        href="https://github.com/albertmolodec/demos/blob/2db25ef51fa0669d5c6f596751f79140dff4f12a/web-component/user-card.js"
+        >Первые версии</a
+      >
+      компонента <code>user-card</code> имели ряд недостатков:
+    </p>
+
+    <ul>
+      <li>
+        Метод <code>attributeChangedCallback</code> вызывал метод <code>render</code> при каждом изменении параметров
+        <code>name</code>, <code>surname</code>, <code>age</code>, <code>imgsrc</code>.
+      </li>
+      <li><code>render</code> каждый раз перерисовывал всю карточку, даже если изменился только один атрибут.</li>
+      <li>Стили и шаблон компонента находились в том же модуле, что и логика.</li>
+    </ul>
+
+    <p>
+      Поэтому я оптимизировал коллбэк путем задания идентификаторов атрибутам в шаблоне, а view-слой перенес в отдельный
+      модуль <code>templates.js</code>
+    </p>
+
+    <pre>
+      <code>
+  attributeChangedCallback(name, oldValue, newValue) {
+    if (!this.shadowRoot) return
+
+    if (['name', 'surname', 'age', 'imgsrc'].includes(name)) {
+      const rerenderingElement = this.shadowRoot.getElementById(name)
+      if (name === 'imgsrc') {
+        console.log(`Attribute imgsrc has been changed.
+                     Replace image source from "${oldValue}" to "${newValue}".`)
+        rerenderingElement.setAttribute('src', newValue)
+      } else {
+        console.log(`Attribute "${name}" has been changed.
+                     Replace value "${oldValue}" to "${newValue}".`)
+        render(newValue, rerenderingElement)
+      }
+    }
+  }
+      </code>
+    </pre>
+
+    <h2>Время выполнения</h2>
+    <p>Я потратил на эту задачу примерно 7 часов.</p>
+    <ul>
+      <li>
+        <b>Полтора часа</b> ушло на знакомство с технологией Web Components: чтение документации и беглый просмотр
+        доклада <a href="https://www.youtube.com/watch?v=3mGZzHMT8g8">"Web Components, или Туда и обратно"</a> от Павла
+        Малышева.
+      </li>
+      <li>
+        <b>Около часа</b> я верстал компонент карточки и подготовил
+        <a href="https://github.com/albertmolodec/demos/blob/main/web-component/style.css">стили</a> для этой страницы.
+      </li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li>Еще <b>чуть больше часа</b> я писал этот текст и редактировал его.</li>
+    </ul>
+
+    <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js" async></script>
     <script src="./user-card.js" type="module" async></script>
   </body>
 </html>
