--- a/web-component/index.html
+++ b/web-component/index.html
@@ -12,7 +12,7 @@
     <title>Web component</title>
   </head>
   <body>
-    <h1>Тестовое задание «Карточка пользователя».</h1>
+    <h1>Тестовое задание «Карточка пользователя»</h1>
 
     <p>Веб-компонент отображает карточку пользователя. В ней есть имя, фамилия, возраст и фотография.</p>
 
@@ -55,7 +55,10 @@
     </div>
 
     <h2>Комментарии</h2>
-    <p>React и ReactDOM импортируется в JS-модулю через</p>
+    <p>
+      React и ReactDOM импортируется в JS-модуль <code>user-card.js</code> через
+      <a href="https://www.skypack.dev/">Skypack</a>. Я выбрал CDN, чтобы не тратить время на установку пакетов и бандлинг.
+    </p>
 
     <h2>Проблемы</h2>
     <p>
