--- a/web-component/index.html
+++ b/web-component/index.html
@@ -20,7 +20,7 @@
     <p>Веб-компонент отображает карточку пользователя. Она содержит имя, фамилию, возраст и фотографию.</p>
 
     <p>
-      Все данные, необходимые для отображения, передаются в компонент с помощью HTML-атрибутов кастомного HTML-тэга
+      Все данные, необходимые для отображения, передаются в компонент с помощью HTML-атрибутов кастомного HTML-тега
       <code>user-card</code>. При изменении атрибутов элемента карточка обновляется в реальном времени. Содержимое
       карточки рендерится с помощью библиотеки React.
     </p>
@@ -59,7 +59,7 @@
 
     <h2>Комментарии</h2>
     <p>
-      React и ReactDOM импортируется в JS-модуль <code>user-card.js</code> через
+      React и ReactDOM импортируются в JS-модуль <code>user-card.js</code> через
       <a href="https://www.skypack.dev/">Skypack</a>. Я выбрал CDN, чтобы не тратить время на установку пакетов и
       сборку.
     </p>
