add custom useToggle hook

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <ul>
         <li><a href="/web-component">Web component rendered by React</a></li>
+        <li><a href="/use-toggle">Custom useToggle hook</a></li>
       </ul>
     </nav>
   </body>
