move here some projects from private repo

--- a/use-toggle/index.html
+++ b/use-toggle/index.html
@@ -7,7 +7,7 @@
     <title>useToggle example</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Loading React…</div>
 
     <script src="./script.js" type="module" defer></script>
   </body>
