--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <ul>
         <li><a href="/web-component">Web component rendered by React</a></li>
         <li><a href="/use-toggle">Custom useToggle hook</a></li>
+        <li><a href="/vanilla-auth-form">Vanilla auth form (2019)</a></li>
+        <li><a href="/xsolla-summer-school">Xsolla summer school test task (2018)</a></li>
       </ul>
     </nav>
   </body>
