modify accent colors

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <h1>My demo projects</h1>
 
       <div class="grid">
-        <article class="item" style="--color-accent: #1f9821;">
+        <article class="item" style="--color-accent: #eeefef;">
           <div class="item__image-wrapper">
             <a class="item__link" href="/use-toggle">
               <img
@@ -31,7 +31,7 @@
           <div class="item__subtitle">2021</div>
         </article>
 
-        <article class="item" style="--color-accent: #CBAAD6;">
+        <article class="item" style="--color-accent: #ffff4c;">
           <div class="item__image-wrapper">
             <a class="item__link" href="/web-component">
               <img
@@ -47,7 +47,7 @@
           <div class="item__subtitle">2021</div>
         </article>
 
-        <article class="item" style="--color-accent: #401286;">
+        <article class="item" style="--color-accent: #e06395;">
           <div class="item__image-wrapper">
             <a class="item__link" href="/vanilla-auth-form">
               <img
