--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <h1>My demo projects</h1>
 
       <div class="grid">
-        <article class="item" style="--color-accent: #eeefef;">
+        <article class="item" style="--color-accent: #eeefef">
           <div class="item__image-wrapper">
             <a class="item__link" href="/use-toggle">
               <img
@@ -25,13 +25,30 @@
               />
             </a>
           </div>
-          <a class="item__link" href="/use-toggle">
-            <h2 class="item__title">Custom useToggle hook</h2>
-          </a>
-          <div class="item__subtitle">2021</div>
+          <div class="item__caption">
+            <a class="item__link" href="/use-toggle">
+              <h2 class="item__title">Custom useToggle hook</h2>
+            </a>
+            <div class="item__subtitle">2021</div>
+            <a href="https://github.com/albertmolodec/demos/tree/source/src/use-toggle" target="_blank">
+              <svg
+                height="24"
+                class="item__github-icon"
+                viewBox="0 0 16 16"
+                version="1.1"
+                width="24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+                ></path>
+              </svg>
+            </a>
+          </div>
         </article>
 
-        <article class="item" style="--color-accent: #ffff4c;">
+        <article class="item" style="--color-accent: #ffff4c">
           <div class="item__image-wrapper">
             <a class="item__link" href="/web-component">
               <img
@@ -41,13 +58,30 @@
               />
             </a>
           </div>
-          <a class="item__link" href="/web-component">
-            <h2 class="item__title">Web component rendered by React</h2>
-          </a>
-          <div class="item__subtitle">2021</div>
+          <div class="item__caption">
+            <a class="item__link" href="/web-component">
+              <h2 class="item__title">Web component rendered by React</h2>
+            </a>
+            <div class="item__subtitle">2021</div>
+            <a href="https://github.com/albertmolodec/demos/tree/source/src/web-component" target="_blank">
+              <svg
+                height="24"
+                class="item__github-icon"
+                viewBox="0 0 16 16"
+                version="1.1"
+                width="24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+                ></path>
+              </svg>
+            </a>
+          </div>
         </article>
 
-        <article class="item" style="--color-accent: #e06395;">
+        <article class="item" style="--color-accent: #e06395">
           <div class="item__image-wrapper">
             <a class="item__link" href="/vanilla-auth-form">
               <img
@@ -57,13 +91,30 @@
               />
             </a>
           </div>
-          <a class="item__link" href="/vanilla-auth-form">
-            <h2 class="item__title">Vanilla auth form</h2>
-          </a>
-          <div class="item__subtitle">2019</div>
+          <div class="item__caption">
+            <a class="item__link" href="/vanilla-auth-form">
+              <h2 class="item__title">Vanilla auth form</h2>
+            </a>
+            <div class="item__subtitle">2019</div>
+            <a href="https://github.com/albertmolodec/demos/tree/source/src/vanilla-auth-form" target="_blank">
+              <svg
+                height="24"
+                class="item__github-icon"
+                viewBox="0 0 16 16"
+                version="1.1"
+                width="24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+                ></path>
+              </svg>
+            </a>
+          </div>
         </article>
 
-        <article class="item" style="--color-accent: #ff0858;">
+        <article class="item" style="--color-accent: #ff0858">
           <div class="item__image-wrapper">
             <a class="item__link" href="/xsolla-summer-school">
               <img
@@ -73,10 +124,27 @@
               />
             </a>
           </div>
-          <a class="item__link" href="/xsolla-summer-school">
-            <h2 class="item__title">Xsolla summer school test task</h2>
-          </a>
-          <div class="item__subtitle">2018</div>
+          <div class="item__caption">
+            <a class="item__link" href="/xsolla-summer-school">
+              <h2 class="item__title">Xsolla summer school test task</h2>
+            </a>
+            <div class="item__subtitle">2018</div>
+            <a href="https://github.com/albertmolodec/demos/tree/source/src/xsolla-summer-school" target="_blank">
+              <svg
+                height="24"
+                class="item__github-icon"
+                viewBox="0 0 16 16"
+                version="1.1"
+                width="24"
+                aria-hidden="true"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+                ></path>
+              </svg>
+            </a>
+          </div>
         </article>
       </div>
     </main>
