--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
           </div>
           <div class="item__caption">
             <a class="item__link" href="/web-component">
-              <h2 class="item__title">Web component rendered by React</h2>
+              <h2 class="item__title" title="Web component rendered by React">Web component rendered by React</h2>
             </a>
             <div class="item__subtitle">2021</div>
             <a href="https://github.com/albertmolodec/demos/tree/source/src/web-component" target="_blank">
