--- a/src/build-react/index.html
+++ b/src/build-react/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="page">
-      <div id="root">Loading React...</div>
+      <div id="root"></div>
     </div>
 
     <script src="./script.js" type="module" async></script>
