--- a/src/build-react/index.html
+++ b/src/build-react/index.html
@@ -13,6 +13,16 @@
       <div id="root"></div>
     </div>
 
-    <script src="./script.js" type="module" async></script>
+    <script
+      src="https://unpkg.com/@babel/standalone/babel.min.js"
+      defer
+    ></script>
+    <script
+      src="./script.js"
+      type="text/babel"
+      data-type="module"
+      data-presets="react"
+      defer
+    ></script>
   </body>
 </html>
