add monaco editor with tabs

--- a/public/projects/build-react/index.html
+++ b/public/projects/build-react/index.html
@@ -15,7 +15,7 @@
       src="https://unpkg.com/@babel/standalone/babel.min.js"
     ></script>
     <script
-      src="./script.jsx"
+      src="./index.jsx"
       type="text/babel"
       data-type="module"
       data-presets="react"
