--- a/public/projects/use-toggle/index.html
+++ b/public/projects/use-toggle/index.html
@@ -7,9 +7,8 @@
     <title>useToggle example</title>
     <style>
       body {
-        font-family: Avenir, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-          Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-          sans-serif;
+        font-family: Avenir, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+          'Open Sans', 'Helvetica Neue', sans-serif;
       }
 
       #root {
@@ -22,6 +21,7 @@
   <body>
     <div id="root">Loading React…</div>
 
-    <script src="./script.js" type="module" defer></script>
+    <script defer src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script defer src="./index.jsx" type="text/babel" data-type="module" data-presets="react"></script>
   </body>
 </html>
