upgrade to node 20, upgrade deps, use esm vite config, format with biome

--- a/public/projects/web-component/index.html
+++ b/public/projects/web-component/index.html
@@ -14,7 +14,7 @@
     <div class="page">
       <h1>
         Тестовое задание
-        <a href="https://github.com/albertmolodec/demos/tree/source/public/projects/web-component">«Карточка пользователя»</a>
+        <a href="https://github.com/kitcat-dev/demos/tree/source/public/projects/web-component">«Карточка пользователя»</a>
       </h1>
 
       <p>Веб-компонент отображает карточку пользователя. Она содержит имя, фамилию, возраст и фотографию.</p>
@@ -118,7 +118,7 @@
         data-height="939"
         data-theme-id="light"
         data-default-tab="js,result"
-        data-user="albertmolodec"
+        data-user="kitcat-dev"
         data-slug-hash="XWNyOpw"
         style="
           height: 939px;
@@ -133,8 +133,8 @@
         data-pen-title="User card (web component) + React"
       >
         <span
-          >See the Pen <a href="https://codepen.io/albertmolodec/pen/XWNyOpw"> User card (web component) + React</a> by
-          Albert Abdulmanov (<a href="https://codepen.io/albertmolodec">@albertmolodec</a>) on
+          >See the Pen <a href="https://codepen.io/kitcat-dev/pen/XWNyOpw"> User card (web component) + React</a> by
+          Albert Abdulmanov (<a href="https://codepen.io/kitcat-dev">@kitcat-dev</a>) on
           <a href="https://codepen.io">CodePen</a>.</span
         >
       </p>
@@ -146,7 +146,7 @@
 
       <p>
         <a
-          href="https://github.com/albertmolodec/demos/blob/2db25ef51fa0669d5c6f596751f79140dff4f12a/web-component/user-card.js"
+          href="https://github.com/kitcat-dev/demos/blob/2db25ef51fa0669d5c6f596751f79140dff4f12a/web-component/user-card.js"
           >Первые версии</a
         >
         компонента <code>user-card</code> имели ряд недостатков:
@@ -189,7 +189,7 @@
         </li>
         <li>
           <b>Около часа</b> я верстал компонент карточки и подготовил
-          <a href="https://github.com/albertmolodec/demos/tree/source/public/projects/web-component/style.css">стили</a> для этой страницы.
+          <a href="https://github.com/kitcat-dev/demos/tree/source/public/projects/web-component/style.css">стили</a> для этой страницы.
         </li>
         <li><b>3 часа</b> я реализовывал компонент и исправлял ошибки.</li>
         <li>Еще <b>часа два</b> я писал этот текст, редактировал его, записывал видео.</li>
