--- a/public/projects/usa-map/index.html
+++ b/public/projects/usa-map/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html class="page" lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
     <title>USA Map Widget</title>
-</head>
-
-<body>
+  </head>
+  <body>
     <div id="root"></div>
-</body>
-
+  </body>
 </html>
